--- a/prog.md.html
+++ b/prog.md.html
@@ -274,7 +274,7 @@ For search(For first, For last, For2 first2, For2 last2, BinPred p);
 Python
 =======================================================
 
-<meta name="keywords" content="*memo_prog.venv*">
+<meta name="keywords" content="*memo_prog.python.venv*">
 ## venv
 
 ### install
@@ -301,7 +301,7 @@ $ deactivate
 ~~~
 
 ## pip
-<meta name="keywords" content="*memo_prog.pip*">
+<meta name="keywords" content="*memo_prog.python.pip*">
 
 Command                          | Description
 ---------------------------------|---
@@ -323,8 +323,15 @@ python -m pip install --upgrade pip
 ~~~
 pip install wheel
 pip install python-language-server
-pip install numpy
+pip install pylint
+pip install flake8
+
 pip install opencv-python
+pip install matplotlib
+pip install numpy
+pip install scipy
+pip install sklearn
+pip install torch===1.6.0 torchvision===0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
 ~~~
 
 ## list / install requrired packages
@@ -353,9 +360,9 @@ if __name__ == "__main__":
 >>> sys.path
 ~~~
 
-<meta name="keywords" content="*memo_prog.anaconda*">
-<meta name="keywords" content="*memo_prog.miniconda*">
-<meta name="keywords" content="*memo_prog.conda*">
+<meta name="keywords" content="*memo_prog.python.anaconda*">
+<meta name="keywords" content="*memo_prog.python.miniconda*">
+<meta name="keywords" content="*memo_prog.python.conda*">
 Anaconda / Miniconda
 =======================================================
 
@@ -397,11 +404,11 @@ conda install python-graphviz graphviz
 #conda install -c conda-forge opencv
 ~~~
 
-<meta name="keywords" content="*memo_prog.numpy*">
+<meta name="keywords" content="*memo_prog.python.numpy*">
 Numpy
 =======================================================
 
-<meta name="keywords" content="*memo_prog.pytorch*">
+<meta name="keywords" content="*memo_prog.python.pytorch*">
 Pytorch
 =======================================================
 
@@ -414,7 +421,7 @@ conda install pytorch torchvision cudatoolkit=10.0 -c pytorch
 conda install pytorch torchvision cudatoolkit=10.1 -c pytorch
 ~~~
 
-<meta name="keywords" content="*memo_prog.tensorflow*">
+<meta name="keywords" content="*memo_prog.python.tensorflow*">
 Tensorflow
 =======================================================
 
