--- a/vcs.md.html
+++ b/vcs.md.html
@@ -433,7 +433,7 @@ git svn clone file:///x/path/myproj   # msys2
 git svn clone X:/path/myproj          # gitbash
 ~~~
 
-<meta name="keywords" content="*memo_svn*">
+<meta name="keywords" content="*memo_vcs.svn*">
 svn
 =======================================================
 
