--- a/dev.md.html
+++ b/dev.md.html
@@ -608,6 +608,7 @@ C-W ""       | paste the unnamed register
 ## vim-plug
   | Command          | Description
 --|------------------|---
+  | :PlugUpgrade     | upgrade vim-plug itself
   | :PlugInstall     | install plugins
   | :PlugUpdate      | update plugins
 
