--- a/prog.md.html
+++ b/prog.md.html
@@ -407,6 +407,12 @@ conda install python-graphviz graphviz
 <meta name="keywords" content="*memo_prog.python.numpy*">
 Numpy
 =======================================================
+~~~
+ar = np.array(list)    # copy
+ar = np.array(ar)      # copy
+ar = np.asarray(list)  # copy
+ar = np.asarray(ar)    # no copy
+~~~
 
 <meta name="keywords" content="*memo_prog.python.pytorch*">
 Pytorch
