--- a/os.md.html
+++ b/os.md.html
@@ -33,13 +33,10 @@ make all
 
 ## python
 ~~~
-python-venv-create torch
-mypython-set-python-win torch   (windows)
-mypython-set-python torch       (linux)
-s
-pip-upgrade
-pip-install-vim
-pip-install-torch
+mypython-venv-create torch
+mypip-upgrade
+mypip-install-vim
+mypip-install-torch
 ~~~
 
 ## vim
