--- a/dev.md.html
+++ b/dev.md.html
@@ -702,6 +702,7 @@ Plug 'neoclide/coc.nvim', {'branch': 'release'}
 :CocInstall coc-python
 :CocInstall coc-clangd
 :CocInstall coc-snippets
+:CocInstall coc-explorer
 :CocUpdate
 
 :CocInfo
