--- a/os.md.html
+++ b/os.md.html
@@ -419,6 +419,7 @@ pacman -S base-devel
 pacman -S bc
 pacman -S python
 pacman -S vifm
+pacman -S fzy
 
 pacman -S mingw-w64-x86_64-toolchain
 pacman -S mingw-w64-x86_64-clang
@@ -570,9 +571,11 @@ sudo apt install vim-gtk3
 sudo apt install vifm
 sudo apt install universal-ctags
 sudo apt install clang
+sudo apt install clang-tools-7
 sudo apt install python3-venv
 sudo apt install python3-dev
 sudo apt install nodejs npm
+sudo apt install fzf
 ~~~
 
 ## Setup
