--- a/prog.md.html
+++ b/prog.md.html
@@ -331,6 +331,8 @@ pip install matplotlib
 pip install numpy
 pip install scipy
 pip install sklearn
+pip install parse
+# pytorch with CUDA 10.2
 pip install torch===1.6.0 torchvision===0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
 ~~~
 
