--- a/links.md.html
+++ b/links.md.html
@@ -59,10 +59,10 @@ Links
 - [Ke-Sen Huang](http://kesen.realtimerendering.com/)
 - [Two Minute Papers](https://www.youtube.com/channel/UCbfYPyITQ-7l4upoX8nvctg)
 - [Seamless](https://shiropen.com/)
-- [Rendering Course Videos A course on ray tracing and global illumination](https://users.cg.tuwien.ac.at/zsolnai/gfx/rendering-course/)
 - [Learn OpenGL](https://learnopengl.com/)
 - [OpenGL Tutorial](http://www.opengl-tutorial.org/jp/)
-- [Physically Based Rendering:From Theory To ImplementationMatt Pharr, Wenzel Jakob, and Greg Humphreys](http://www.pbr-book.org/3ed-2018/contents.html)
+- [Physically Based Rendering:From Theory To Implementation](http://www.pbr-book.org/3ed-2018/contents.html)
+- [Rendering Course Videos A course on ray tracing and global illumination](https://users.cg.tuwien.ac.at/zsolnai/gfx/rendering-course/)
 - [Unreal Engine 4: Digital Human](https://docs.unrealengine.com/en-US/Resources/Showcases/DigitalHumans/index.html)
 
 ## Data
@@ -266,10 +266,14 @@ Programming
 - [scikit-learn](http://scikit-learn.org/stable/)
 - [scikit-image](https://scikit-image.org/)
 
+## PyTorch
+- [PyTorch](https://pytorch.org/)
+- [TRANSFER LEARNING FOR COMPUTER VISION TUTORIAL](https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html)
+- [TORCH.UTILS.TENSORBOARD](https://pytorch.org/docs/stable/tensorboard.html)
+
 ## Deep learning
 - [Anaconda](https://www.anaconda.com/)
   | [cloud](https://anaconda.org/)
-- [PyTorch](https://pytorch.org/)
 - [TensorFlow](https://www.tensorflow.org/)
 - [機械学習ライブラリまとめ](https://techacademy.jp/magazine/17303)
 
