--- a/prog.md.html
+++ b/prog.md.html
@@ -332,6 +332,7 @@ pip install numpy
 pip install scipy
 pip install sklearn
 pip install parse
+pip install tensorboard
 # pytorch with CUDA 10.2
 pip install torch===1.6.0 torchvision===0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
 ~~~
@@ -417,20 +418,21 @@ ar = np.asarray(ar)    # no copy
 ~~~
 
 <meta name="keywords" content="*memo_prog.python.pytorch*">
-Pytorch
+PyTorch
 =======================================================
 
+<!--
 ## install pytorch
 ~~~
 #conda install pytorch-cpu -c pytorch 
 #pip install torchvision
-
 conda install pytorch torchvision cudatoolkit=10.0 -c pytorch
 conda install pytorch torchvision cudatoolkit=10.1 -c pytorch
 ~~~
+-->
 
 <meta name="keywords" content="*memo_prog.python.tensorflow*">
-Tensorflow
+TensorFlow
 =======================================================
 
 ## install tensorflow
