--- a/links.md.html
+++ b/links.md.html
@@ -55,19 +55,29 @@ Links
 - [TechCrunch](http://jp.techcrunch.com/)
 - [Slashdot](http://slashdot.org/)
 
-## Research
-- [Ke-Sen Huang](http://kesen.realtimerendering.com/)
+## Data
+- [icooon-mono](http://icooon-mono.com/)
+
+</div>
+
+Research
+=======================================================
+<div id="col2">
+## News
 - [Two Minute Papers](https://www.youtube.com/channel/UCbfYPyITQ-7l4upoX8nvctg)
 - [Seamless](https://shiropen.com/)
+- [Ke-Sen Huang](http://kesen.realtimerendering.com/)
+
+## Graphics
 - [Learn OpenGL](https://learnopengl.com/)
 - [OpenGL Tutorial](http://www.opengl-tutorial.org/jp/)
 - [Physically Based Rendering:From Theory To Implementation](http://www.pbr-book.org/3ed-2018/contents.html)
 - [Rendering Course Videos A course on ray tracing and global illumination](https://users.cg.tuwien.ac.at/zsolnai/gfx/rendering-course/)
 - [Unreal Engine 4: Digital Human](https://docs.unrealengine.com/en-US/Resources/Showcases/DigitalHumans/index.html)
 
-## Data
-- [icooon-mono](http://icooon-mono.com/)
-
+## Deep Learning
+- [TRANSFER LEARNING FOR COMPUTER VISION TUTORIAL](https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html)
+- [TORCH.UTILS.TENSORBOARD](https://pytorch.org/docs/stable/tensorboard.html)
 </div>
 
 Develop
@@ -268,10 +278,8 @@ Programming
 
 ## PyTorch
 - [PyTorch](https://pytorch.org/)
-- [TRANSFER LEARNING FOR COMPUTER VISION TUTORIAL](https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html)
-- [TORCH.UTILS.TENSORBOARD](https://pytorch.org/docs/stable/tensorboard.html)
 
-## Deep learning
+## Deep Learning
 - [Anaconda](https://www.anaconda.com/)
   | [cloud](https://anaconda.org/)
 - [TensorFlow](https://www.tensorflow.org/)
