--- a/cg.md.html
+++ b/cg.md.html
@@ -85,6 +85,7 @@ wheel                | zoom
 ### Object
 key                  | command
 ---                  | ---
+A                    | add
 x                    | delete
 g                    | translate in x, y, z axis
 gx                   | translate along x axis
