--- a/dev.md.html
+++ b/dev.md.html
@@ -323,6 +323,36 @@ Command       | Description
 <meta name="keywords" content="*memo_vim*">
 vim
 =======================================================
+<meta name="keywords" content="*memo_vim.tips*">
+## Tips
+Command         | Description
+---             | ---
+C-A             | make a link
+C-O             | open the link under the cursor
+C-P             | easymotion
+F4              | :GgrepHere
+:Tips           | open the tips window
+:RunVscode      | run vscode
+:Ggrep {word}   | Ggrep the word
+:GgrepHere      | Ggrep the word under the cursor
+:VimGrep {word} | vimgrep the word
+:VimGrepHere    | vimgrep the word under the cursor
+:Cdo            | apply the command '@q' to each entry in the quickfix list
+:Cfdo           | apply the command '@q' to each file in the quickfix list
+:ClangFormat    | apply clang-format to the current file
+:TabBar         | Tabularize for vertical bars
+:Dia            | open the diary window
+:Trans          | open the translator window (ESC, :en, :ja, :zh, :q)
+:EJ {word}      | English-Japanese dictionary
+:EE {word}      | English-English dictionary
+:GJ {word}      | German-Japanese dictionary
+:Dja {word}     | Any-Japanese dictionary
+:Den {word}     | Any-English dictionary
+:Dzh {word}     | Any-Chinese dictionary
+:Tja {word}     | Any-Japanese translation
+:Ten {word}     | Any-English translation
+:Tzh {word}     | Any-Chinese translation
+
 ## basic
 
 ### スタートアップ時間計測
