--- a/dev.md.html
+++ b/dev.md.html
@@ -677,7 +677,7 @@ C-W ""       | paste the unnamed register
 ## nerdtree
   | Command          | Description
 --|------------------|---
-  | <CR>             | open
+  | CR               | open
   | o                | open
   | go               | view
   | m                | menu
@@ -687,7 +687,7 @@ C-W ""       | paste the unnamed register
   | r                | refresh the current dir
   | R                | refresh the current root
   | C                | change tree root here
-* | <Tab>            | C
+* | Tab              | C
   | cd               | change CWD to here
   | CD               | change the root to CWD
 
