--- a/cg.md.html
+++ b/cg.md.html
@@ -150,6 +150,14 @@ F12                  | rendering
 - https://docs.blender.org/api/current/index.html
 - https://docs.blender.org/api/2.83
 
+## BSDF
+- https://docs.blender.org/manual/en/latest/render/shader_nodes/shader/principled.html
+- https://docs.blender.org/manual/en/latest/render/shader_nodes/shader/hair_principled.html
+
+## BSDF (Arnold)
+- https://docs.arnoldrenderer.com/display/A5AFMUG/Standard+Surface
+- https://docs.arnoldrenderer.com/display/A5AFMUG/Standard+Hair
+
 <meta name="keywords" content="*memo_cg.eigen*">
 Eigen
 =======================================================
