--- a/my.md.html
+++ b/my.md.html
@@ -72,7 +72,7 @@ Key | Description
 F1  | tmux.prefix
 F2  | vim.nerdtree
 F3  | vim.fugitive.Gstatus
-F4  | vim.fugitive.Ggrep
+F4  | vim.fugitive.GgrepHere
 F5  | ahk.side by side
 F6  | ahk.restore
 F7  | tmux.toggle left pane width 60/80
