--- a/prog.md.html
+++ b/prog.md.html
@@ -360,6 +360,18 @@ import matplotlib.pyplot as plt
 from matplotlib import pyplot as plt
 ~~~
 
+## syntax
+~~~
+if expr and expr:
+  pass
+
+if expr or expr:
+  pass
+
+if not expr:
+  pass
+~~~
+
 <meta name="keywords" content="*memo_prog.python.anaconda*">
 <meta name="keywords" content="*memo_prog.python.miniconda*">
 <meta name="keywords" content="*memo_prog.python.conda*">
