--- a/init.md.html
+++ b/init.md.html
@@ -321,6 +321,11 @@ Upgrade
 python -m pip install --upgrade pip
 ~~~
 
+## termux
+~~~
+pkg upgrade
+~~~
+
 <style class="fallback">body{visibility:hidden}</style>
 <script src="markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
