--- a/os.md.html
+++ b/os.md.html
@@ -142,10 +142,12 @@ taskkill /PID PID
 net share
 ~~~
 
-### ネットワークドライブ割り当てを表示
-~~~
-net use
-~~~
+### ネットワークドライブ割り当て
+Command               | Description
+---                   | ---
+net use               | 割り当てを表示
+net use X: ¥¥PC¥share | 割り当て
+net use X: /DELETE    | 割り当てを削除
 
 ## リモートデスクトップ接続でサーバー上のOpenGLアプリケーションを起動する
 ### セッションIDを調べる
