--- a/links.md.html
+++ b/links.md.html
@@ -179,15 +179,17 @@ Develop
   | [code](http://miffysora.wikidot.com/graphviz)
 
 ## Windows
+- [chocolatey](https://chocolatey.org/)
+- [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
 - [AutoHotkey](https://www.autohotkey.com/)
   | [doc](https://www.autohotkey.com/docs/AutoHotkey.htm)
   | [wiki](http://ahkwiki.net/Top)
-- [chocolatey](https://chocolatey.org/)
 - [CrystalDiskMark](https://crystalmark.info/ja/software/crystaldiskmark/)
-- [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
 - [Process Explorer](https://docs.microsoft.com/en-us/sysinternals/downloads/process-explorer)
 - [Dependency Walker](http://www.dependencywalker.com/)
 - [WinDirStat](https://windirstat.net/)
+- [tablacus](https://tablacus.github.io/explorer.html)
+- [faststone](https://www.faststone.org/)
 
 ## Termux
 - [termux](https://termux.com/)
