--- a/init.md.html
+++ b/init.md.html
@@ -286,7 +286,7 @@ conda install python-graphviz graphviz
 ## Vim
 ~~~
 :PlugInstall
-:CocInstall coc-json coc-tsserver coc-python coc-clangd coc-snippets
+:CocInstall coc-tsserver coc-json coc-python coc-clangd coc-snippets
 ~~~
 
 <meta name="keywords" content="*memo_init.update*">
