--- a/my.md.html
+++ b/my.md.html
@@ -132,7 +132,7 @@ vim.win    | C-H             | window left
            | C-L             | window right
            | C-E             | expand the current window
            | C-X             | delete the current window
-           | C-N             | redraw screen
+           | C-N             | redraw screen, display info
 vim.url    | C-A             | make a hyper link in the markdown format
            | C-O             | open an URL under the cursor by chrome
 vim.hl     | C-U             | quickhl
