--- a/os.md.html
+++ b/os.md.html
@@ -84,6 +84,15 @@ Windows + Right        | ウィンドウを右半分に最大化
 Windows + Tab          | タスクビューを開く
 Windows + Ctrl + Left  | 左の仮想デスクトップへ移動
 Windows + Ctrl + Right | 右の仮想デスクトップへ移動
+Windows + Shift + S    | 範囲を指定してスクリーンショット
+Windows + PrintScreen  | 全画面をスクリーンショットして保存 (~/Pictures/スクリーンショット)
+Alt + PrintScreen      | アクティブなウィンドウをスクリーンショット (~/OneDrive/画像/スクリーンショット)
+
+### Windows + PrintScreenの保存先
+- ピクチャ/スクリーンショットを右クリック > プロパティ > 場所で指定
+
+### Alt + PrintScreenのOneDriveへの保存
+- OneDrive > 設定 > バックアップ > スクリーンショット
 
 <meta name="keywords" content="*memo_os.dos*">
 <meta name="keywords" content="*memo_os.bat*">
