--- a/dev.md.html
+++ b/dev.md.html
@@ -220,7 +220,7 @@ cfile  | file under the cursor
 | m!    | C-N       | j                         | C-L C-G    | redraw screen, display info
 |       | C-O       | prev in jump list         |            |
 |       | C-P       | k                         |            |
-| o     | C-Q       | terminal control          |            |
+| m!    | C-Q       | terminal control          | @q         | exec the command in the register q
 | o!    | C-R       | redo                      |            |
 | o     | C-S       | terminal control          |            |
 | o!    | C-T       | prev in tag list          |            |
